--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build -m",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "eslint": "^8.11.0",
     "eslint-plugin-github": "^4.3.5",
     "eslint-plugin-jest": "^26.1.2",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "js-yaml": "^4.1.0",
     "prettier": "2.6.0",
